--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+solid (4.96.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream alpha release
+    - Drop rename_dbus.diff, upstreamed 
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Tue, 11 Feb 2014 18:39:54 +0100
+
 solid (4.95.0-0ubuntu1) trusty; urgency=low
 
   * Initial tech preview release
