--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 solid (4.96.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Rohan Garg ]
   * New upstream alpha release
     - Drop rename_dbus.diff, upstreamed 
+
+  [ Scarlett Clark ]
+  * libs changed to 4.x renamed files/entries. 
 
  -- Rohan Garg <rohangarg@kubuntu.org>  Tue, 11 Feb 2014 18:39:54 +0100
 
