--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (4.97.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream alpha release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Mar 2014 12:40:52 +0000
+
 solid (4.96.0-0ubuntu1) trusty; urgency=medium
 
   [ Rohan Garg ]
