[ Jonathan Riddell ] [ Scarlett Clark ] -Added qtdeclarative5-kf5solid5.0 to hold libsolidextensionplugin.so. Created new symbols
added:
  debian/qtdeclarative5-kf5solid5.0.install
modified:
  debian/changelog
  debian/control
  debian/libkf5solid5.install
  debian/libkf5solid5.symbols

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 solid (4.97.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * New upstream alpha release
   * Rename library package for soname 5
+
+  [ Scarlett Clark ]
+   -Added qtdeclarative5-kf5solid5.0 to hold libsolidextensionplugin.so. 
+   - Created new symbols
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Mar 2014 12:40:52 +0000
 
