--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ solid (4.97.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Scarlett Clark ]
   * Added qtdeclarative5-kf5solid-5.0 to hold libsolidextensionplugin.so.
   * Created new symbols
+  * Fix missing file 
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Mar 2014 12:40:52 +0000
 
