--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (4.98.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 29 Mar 2014 11:04:27 +0000
+
 solid (4.97.0-0ubuntu1) trusty; urgency=medium
 
   [ Jonathan Riddell ]
