--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (4.99.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (4.99.0-0ubuntu1~ubuntu14.04~ppa2) trusty; urgency=medium
 
   * Beta 2 release
 
