--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (4.99.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Install some files in arch dependent path.
+
+ -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sun, 01 Jun 2014 22:48:03 +0200
+
 solid (4.99.0-0ubuntu1) trusty; urgency=medium
 
   * Beta 2 release
