--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,11 @@
-solid (4.99.0-0ubuntu2) UNRELEASED; urgency=medium
-
-  * Install some files in arch dependent path.
-  * Remove Pre-Depends and set correct Depends for -data package.
-
- -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sun, 01 Jun 2014 22:48:03 +0200
-
 solid (4.99.0-0ubuntu1) trusty; urgency=medium
 
+  [ Jonathan Riddell ]
   * Beta 2 release
+
+  [ José Manuel Santamaría Lema ]
+  * Install some files in arch dependent path.
+  * Remove Pre-Depends and set correct Depends for -data package.
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 May 2014 13:46:01 +0100
 
