--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 solid (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * New upstream beta release
+
+  [ Scarlett Clark ]
+  * Bump depends versions
+  * Bump depends versions
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:46:31 +0100
 
