Remove useless Pre-Depends fields used for multiarch compat in releases older than trusty

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ solid (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
   * Bump depends versions
   * Bump depends versions
 
+  [ Harald Sitter ]
+  * Remove useless Pre-Depends fields used for multiarch compat in
+    releases older than trusty
+
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:46:31 +0100
 
 solid (4.99.0-0ubuntu1) trusty; urgency=medium
