--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (4.100.0-0ubuntu1) utopic; urgency=medium
 
   [ Jonathan Riddell ]
   * New upstream beta release
