--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.0.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Initial stable upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 02 Jul 2014 00:44:04 +0200
+
 solid (4.100.0-0ubuntu1) utopic; urgency=medium
 
   [ Jonathan Riddell ]
