--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 solid (5.0.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * Initial stable upstream release
+
+  [ Scarlett Clark ]
+  * Fix symbols 
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 02 Jul 2014 00:44:04 +0200
 
