--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ solid (5.0.0-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Scarlett Clark ]
   * Fix symbols 
+  * Update watch file to stable
+  * Add Vcs
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 02 Jul 2014 00:44:04 +0200
 
