releasing package solid version 5.0.0-0ubuntu1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-solid (5.0.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.0.0-0ubuntu1) utopic; urgency=medium
 
+  [ Jonathan Riddell ]
   * Initial stable upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 02 Jul 2014 00:44:04 +0200
+ -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 10 Jul 2014 17:30:10 +0200
