--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.0.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Update copyright to match licensing to source 
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Wed, 16 Jul 2014 09:13:48 -0700
+
 solid (5.0.0-0ubuntu1) utopic; urgency=medium
 
   [ Jonathan Riddell ]
