--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (5.0.0-0ubuntu2) UNRELEASED; urgency=medium
+solid (5.0.0-0ubuntu2) utopic; urgency=medium
 
   * Update copyright to match licensing to source
   * Rename qml package to qml-module naming scheme
