Update libraries *.install paths so a soname bump doesn't go unnoticed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+solid (5.0.0-0ubuntu3) UNRELEASED; urgency=medium
+
+  * Update libraries *.install paths so a soname bump doesn't go
+    unnoticed.
+
+ -- José Manuel Santamaría Lema <panfaust@gmail.com>  Mon, 21 Jul 2014 00:42:47 +0200
+
 solid (5.0.0-0ubuntu2) utopic; urgency=medium
 
   * Update copyright to match licensing to source
