--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Sun, 03 Aug 2014 19:05:46 -0700
+
 solid (5.0.0-0ubuntu3) utopic; urgency=medium
 
   [ Jonathan Riddell ]
