--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-solid (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.1.0-0ubuntu1) utopic; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Sun, 03 Aug 2014 19:05:46 -0700
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Tue, 05 Aug 2014 17:08:07 +0200
 
 solid (5.0.0-0ubuntu3) utopic; urgency=medium
 
