--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 solid (5.2.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Use pkg-kde-tools version 3 scripts
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 11 Sep 2014 20:51:57 +0000
 
