--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 solid (5.2.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * New upstream release
   * Use pkg-kde-tools version 3 scripts
+
+  [ Scarlett Clark ]
+  * Fix qml-module-org-kde-solid.install to reflect new paths. 
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 11 Sep 2014 20:51:57 +0000
 
