--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ solid (5.2.0-0ubuntu1) UNRELEASED; urgency=medium
   * Fix qml-module-org-kde-solid.install to reflect new paths. 
   * Move copyright extra details to comment to silence 
     space-in-std-shortname-in-dep5-copyright lintian error. 
+  * Revert to original install paths. Upstream Review:120229
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 11 Sep 2014 20:51:57 +0000
 
