--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (5.2.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.2.0-0ubuntu1) utopic; urgency=medium
 
   [ Jonathan Riddell ]
   * New upstream release
@@ -10,7 +10,7 @@ solid (5.2.0-0ubuntu1) UNRELEASED; urgency=medium
     space-in-std-shortname-in-dep5-copyright lintian error. 
   * Revert to original install paths. Upstream Review:120229
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 11 Sep 2014 20:51:57 +0000
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 22 Sep 2014 19:35:42 +0200
 
 solid (5.1.0-0ubuntu1) utopic; urgency=medium
 
