--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solid (5.2.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Do not build depend on qt5-default, we only need qtbase5-dev
+
+ -- Harald Sitter <apachelogger@kubuntu.org>  Tue, 30 Sep 2014 10:35:19 +0200
+
 solid (5.2.0-0ubuntu1) utopic; urgency=medium
 
   [ Jonathan Riddell ]
