--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-solid (5.2.0-0ubuntu2) UNRELEASED; urgency=medium
+solid (5.3.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Harald Sitter ]
   * Do not build depend on qt5-default, we only need qtbase5-dev
 
- -- Harald Sitter <apachelogger@kubuntu.org>  Tue, 30 Sep 2014 10:35:19 +0200
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 06 Oct 2014 11:39:33 +0100
 
 solid (5.2.0-0ubuntu1) utopic; urgency=medium
 
