--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-solid (5.3.0-0ubuntu1) UNRELEASED; urgency=medium
+solid (5.3.0-0ubuntu1) utopic; urgency=medium
 
   [ Harald Sitter ]
   * Do not build depend on qt5-default, we only need qtbase5-dev
@@ -6,7 +6,7 @@ solid (5.3.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 06 Oct 2014 11:39:33 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 07 Oct 2014 11:13:34 +0100
 
 solid (5.2.0-0ubuntu1) utopic; urgency=medium
 
